argocd/argocd-ns.yaml
##################################################################################################
# Create ns
##################################################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
